# aomp-extras

./: CMakeLists.txt  LICENSE  m.patch
.github/ISSUE_TEMPLATE/: issue_report.yml
aomp-device-libs/: CMakeLists.txt  OCL.cmake
aomp-device-libs/aompextras/: CMakeLists.txt
aomp-device-libs/aompextras/src/: ballot.ll  cprint.c  cprint.ll  device_atomic_functions.hip  device_functions.hip  hipdrt_printf_alloc.hip  lanemask.ll  opencuda2gcn.ll  trap.ll
aomp-device-libs/cuda2gcn/: CMakeLists.txt
aomp-device-libs/libm/: CMakeLists.txt
aomp-device-libs/libm/src/: complex.def  libm-amdgcn.c  libm-nvptx.c  libm-nvptx.h  libm.c  new
hostcall/: CMakeLists.txt  LICENSE
hostcall/include/: atmi_hostcall.h  hostcall.h  hostcall_service_id.h  hostcall_stubs.h
hostcall/lib/: CMakeLists.txt  README.md  hostcall-config.cmake.in  hostcall.so.def  static.CMakeLists.txt
hostcall/lib/include/: amd_hostcall.h
hostcall/lib/src/: atmi_hostcall.c  hostcall.cpp  hostcall_handlers.c  hostcall_internal.h  hostcall_printf.c  minimal_atmi.cpp  minimal_atmi.h
hostcall/lib/tests/: CMakeLists.txt  check-header.c  common.h  common.hpp  consumer.c  deregister-buffer.cpp  initialize-buffer.cpp  many-waves.cpp  no-handler.cpp  no-hsa.c  one-wave.cpp  one-workitem.cpp
hostcall/libdevice/: CMakeLists.txt
hostcall/libdevice/src/: hostcall_invoke.cl  hostcall_stubs.hip  needs_hostcall_buffer.hip
hostcall/misc/: create_sameer_patch.sh  sameer.patch
utils/: CMakeLists.txt
utils/src/: prepare-builtins.cpp
